--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,7 +4,7 @@ platform :ios, '12.0'
 
 target 'HTTPService7Sdk_Example' do
   pod 'HTTPService7Sdk', :path => '../'
-  pod 'Common7Sdk', :path => '/Users/mac/Desktop/sdk/localsdk/Common7Sdk/Common7Sdk.podspec'
+  pod 'Common7Sdk', :path => '../../Common7Sdk/Common7Sdk.podspec'
 
   target 'HTTPService7Sdk_Tests' do
     inherit! :search_paths
