--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,8 @@
 use_frameworks!
 
-platform :ios, '12.0'
+platform :ios, '13.0'
+
+inhibit_all_warnings!
 
 target 'HTTPService7Sdk_Example' do
   pod 'HTTPService7Sdk', :path => '../'
@@ -15,7 +17,7 @@ end
 post_install do |installer|
     installer.pods_project.targets.each do |target|
         target.build_configurations.each do |config|
-            config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+            config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
             config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
         end
     end
